--- a/app/public/index.html
+++ b/app/public/index.html
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <titlePvPer.io/title>
+    <title>PvPer.io</title>
   </head>
 
   <body>
